# ProjectWorldSimRust

./: .gitignore  ACTIVATION_PLAN.md  ALL_TODOS_COMPLETE.md  API.md  ARCHITECTURE.md  BUILDER_DIAGNOSTIC_COMPLETE.md  BUILDING_CONSTRUCTION_DIAGNOSTIC.md  BUILDING_SYSTEM_COMPLETE.md  BUILDING_VISUALIZATION_TEST.md  BUILD_2_COMPLETE.md  CHECKPOINT.md  CIVILIZATION_SYSTEM_COMPLETE.md  COMPLETE_DIAGNOSTIC_SYSTEM.md  CRITICAL_DEADLOCK_FIX_FINAL.md  Cargo.toml  DEADLOCK_FIX_PHASE3.md  DEBUG_BUILDING_RENDERING.md  DEVELOPMENT.md  DIAGNOSTIC_BUILD_READY.md  DIAGNOSTIC_EMPTY_SCENE.md  ECONOMY_DASHBOARD_COMPLETE.md  ECONOMY_DIAGNOSTIC_COMPLETE.md  FINAL_DEADLOCK_RESOLUTION.md  FINAL_TEST_INSTRUCTIONS.md  FRESH_START_COMPLETE_SYSTEM.md  FULL_IMPLEMENTATION_PROGRESS.md  FULL_INTEGRATION_COMPLETE.md  HISTORICAL_PRICE_TRACKING_COMPLETE.md  INTEGRATED_ECONOMY_DESIGN.md  INVENTORY_VISUALIZATION_ADDED.md  MARKET_ANALYSIS.md  ORGANIC_START_COMPLETE.md  PHASE3_DISABLED_TEST.md  PHASE_1_ECONOMIC_SYSTEM_COMPLETE.md  PHASE_1_TESTING_GUIDE.md  PHASE_2_RESOURCE_BUILDING_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_HIERARCHICAL_AI_COMPLETE.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  (+14 more)
crates/admin_api/: Cargo.toml
crates/admin_api/src/: handlers.rs  lib.rs  routes.rs  server.rs
crates/agents/: Cargo.toml
crates/agents/src/: agent.rs  lib.rs  lifecycle.rs  ownership.rs  personality.rs  skills.rs
crates/cognitive/: Cargo.toml
crates/cognitive/src/: goap.rs  lib.rs  perception.rs  utility.rs
crates/core/: Cargo.toml
crates/core/src/: ids.rs  lib.rs  math.rs  spatial.rs  types.rs
crates/event_bus/: Cargo.toml
crates/event_bus/src/: bus.rs  events.rs  lib.rs
crates/meta/: Cargo.toml
crates/meta/src/: dungeon_master.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: database.rs  lib.rs  snapshot.rs
crates/societal/: Cargo.toml
crates/societal/src/: currency.rs  economy.rs  kingdom.rs  lib.rs  market.rs  politics.rs  social.rs
crates/world/: Cargo.toml
crates/world/src/: buildings.rs  content.rs  ecology.rs  grid.rs  lib.rs  pathfinding.rs  resources.rs
sim_server/: Cargo.toml
sim_server/src/: main.rs  simulation.rs
