[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/event_bus",
    "crates/persistence",
    "crates/admin_api",
    "crates/world",
    "crates/agents",
    "crates/cognitive",
    "crates/societal",
    "crates/meta",
    "sim_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["World Sim Team"]
license = "MIT"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Web/API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# UUID and Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Math and Pathfinding
nalgebra = "0.32"
petgraph = "0.6"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random
rand = "0.8"
rand_distr = "0.4"

# Collections
ahash = "0.8"
smallvec = "1.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

