[package]
name = "world_sim_agents"
version.workspace = true
edition.workspace = true

[dependencies]
world_sim_core = { path = "../core" }
world_sim_event_bus = { path = "../event_bus" }
world_sim_world = { path = "../world" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
chrono = { workspace = true }

