[package]
name = "world_sim_cognitive"
version.workspace = true
edition.workspace = true

[dependencies]
world_sim_core = { path = "../core" }
world_sim_agents = { path = "../agents" }
world_sim_world = { path = "../world" }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
smallvec = { workspace = true }

