[package]
name = "world_sim_core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
nalgebra = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

