[package]
name = "world_sim_event_bus"
version.workspace = true
edition.workspace = true

[dependencies]
world_sim_core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

