[package]
name = "world_sim_persistence"
version.workspace = true
edition.workspace = true

[dependencies]
world_sim_core = { path = "../core" }
world_sim_event_bus = { path = "../event_bus" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }

