[package]
name = "world_sim_societal"
version.workspace = true
edition.workspace = true

[dependencies]
world_sim_core = { path = "../core" }
world_sim_event_bus = { path = "../event_bus" }
world_sim_agents = { path = "../agents" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

