[package]
name = "world_sim_world"
version.workspace = true
edition.workspace = true

[dependencies]
world_sim_core = { path = "../core" }
world_sim_event_bus = { path = "../event_bus" }
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

